app/ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ghost
  name: ghost
  labels:
    app: ghost
spec:
  selector:
    matchLabels:
      app: ghost  
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:alpine
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 180Mi
          limits:
            cpu: 350m
            memory: 300Mi 
        ports:
        - containerPort: 2368
          name: ghost 
        readinessProbe:
          tcpSocket:
            port: ghost
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: ghost
          initialDelaySeconds: 30
          periodSeconds: 30                              
        volumeMounts:
          - name: ghost-persistent-storage
            mountPath: /var/lib/ghost/content
      volumes:
        - name: ghost-persistent-storage
          persistentVolumeClaim:
            claimName: ghost
