app/ghost/ingress-questverse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost
spec:
  rules:
  - host: questverse.blog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost
            port:
              number: 80
  ingressClassName: nginx
